--- a/Contact.html
+++ b/Contact.html
@@ -35,7 +35,7 @@
 
         <section class="contact-section1">
 
-            <article class="main-article">
+            <article class="contact-main-article">
 
                 <h2 class="main-h2"> Feedback? </h2>
 
@@ -55,7 +55,7 @@
 
         <section class="contact-section2">
 
-            <article class="main-article">
+            <article class="contact-main-article">
 
                 <h2 class="main-h2"> Us </h2>
 
