--- a/index.html
+++ b/index.html
@@ -59,9 +59,8 @@
                 <h2 class="main-h2"> 5G </h2>
 
                 <p class="main-p">  
-                    Explore the internet like never before!
-                    With our first unit supporting 5G
-                    you will be taking the world of apps and websites to new heights.
+                    Explore the internet like never before
+                    with our first unit supporting 5G!
                 </p>
 
                 <figure class="image-container">
@@ -79,8 +78,7 @@
                     <h2 class="main-h2"> 200Gb </h2>
     
                     <p class="main-p">  
-                        With an all new increased storage capacity
-                        you'll be able to host over thousands of pictures
+                        You'll be able to host over thousands of pictures
                         to store ALL of your great memories
                     </p>
     
@@ -99,7 +97,7 @@
                 <h2 class="main-h2"> RTX </h2>
 
                 <p class="main-p">  
-                    That's right! We will be using Nvidia RTX graphics technology
+                    We will be using Nvidia RTX graphics technology
                     to give you the best mobile gaming experience ever. 
                 </p>
 
