Måndags Eftermidda Uppdatering

--- a/index.html
+++ b/index.html
@@ -27,11 +27,9 @@
 
         <h1 class="h1-container"> Samsung Galaxy Nova </h1>
         
-        <div></div>
-        
     </header>
 
-    <main class="desktop-only">
+    <main class="home-main">
 
         <section class="main-section1">
 
