--- a/Contact.html
+++ b/Contact.html
@@ -11,7 +11,7 @@
 
 <body class="contact">
     
-    <header class="contact-header" title="header image">
+    <header title="header image">
 
         <nav>
             <ul>
@@ -29,7 +29,7 @@
         
     </header>
 
-    <main class="contact-main" class="desktop-contact">
+    <main class="contact-main">
 
         <section class="contact-section1">
 
@@ -56,15 +56,13 @@
             <article class="contact-main-article">
 
                 <h2 class="main-h2"> Us </h2>
-
-                    <li class="contact-info">
-
-                        <a class="list-info"> +074826383628 </a>
-                        <a class="list-info"> Nova@samsung.com </a>
-                        <a class="list-info"> Chicago, Bellair, Fancy street 35 (33667)  </a>
-
-                    </li>
-
+                    <ul>
+                        <li class="contact-info">
+                            <a class="list-info"> +074826383628 </a>
+                            <a class="list-info"> Nova@samsung.com </a>
+                            <a class="list-info"> Chicago, Bellair, Fancy street 35 (33667)  </a>
+                        </li>
+                    </ul>
                 <figure class="image-container">
                     <img class="image" src="img/two.png" alt="image">
                 </figure>
